--- a/about.qmd
+++ b/about.qmd
@@ -7,7 +7,7 @@ about:
   links:
     - icon: twitter
       text: twitter
-      href: https://http://twitter.com/armelleballian/
+      href: https://twitter.com/armelleballian/
     - icon: github
       text: Github
       href: https://github.com/armelleblln
