--- a/about.qmd
+++ b/about.qmd
@@ -21,7 +21,7 @@ about:
 * delete this section
 
 
-:::{#template-area, .justify}
+:::{#template-area}
 
 I am a geologist whose main interests cover sedimentary geology, exogenous processes and paleoenvironmental studies.
 
