--- a/about.qmd
+++ b/about.qmd
@@ -11,9 +11,9 @@ about:
     - icon: github
       text: Github
       href: https://github.com/armelleblln
-    - icon: research_gate
-      text: Research Gate
-      href: https://www.researchgate.net/profile/Armelle-Ballian
+    - icon: scholar
+      text: Google Scholar
+      href: https://scholar.google.com/citations?user=aId4LewAAAAJ&hl=fr
 ---
 [comment]:  (Tasks for this page
 Update the YAML header. you can check out different layouts of the pre-formatted part at <https://quarto.org/docs/websites/website-about.html#templates>
