--- a/index.qmd
+++ b/index.qmd
@@ -1,8 +1,18 @@
 ---
 pagetitle: "Armelle Ballian"
 ---
+:::{#template-area}
+
+
+:::
+## Publications 
+
 Ballian, A., Chawchai, S., Miocic, J. M., Charoenchatree, W., Bissen, R., & Preusser, F. (2023).  
 Late Holocene coastal dynamics south of the Chanthaburi estuary, eastern Gulf of Thailand. Quaternary Research, 1-11.  
 
 Boateng, D., Mutz, S. G., Ballian, A., Meijers, M. J., Methner, K., Botsyun, S., Mulch, A. & Ehlers, T. A. (in review).  
-The effects of diachronous surface uplift of the European Alps on regional climate and the oxygen isotopic composition of precipitation. Earth System Dynamics Discussions, 1-45.  [link]https://esd.copernicus.org/preprints/esd-2022-48/esd-2022-48.pdf{target="_blank"}
+The effects of diachronous surface uplift of the European Alps on regional climate and the oxygen isotopic composition of precipitation. Earth System Dynamics Discussions, 1-45.   
+[link]https://esd.copernicus.org/preprints/esd-2022-48/esd-2022-48.pdf{target="_blank"}
+
+
+## Research abstracts
