--- a/about.qmd
+++ b/about.qmd
@@ -34,6 +34,16 @@ My project focuses on the Western and Eastern Alps, along with extending the rec
 When I am not working on the Alpine surface uplift history, I am playing cello, boxing or crafting ! 
 
 :::
+## Vita 
+### Education  
+Since 2021 : PhD student at the Senckenberg Climate and Biodiversity Research Centre (SBiK-Frankfurt am Main, Germany)
+2017-2020 : Master of Science in Geology at the University of Freiburg im Breisgau (Germany)  
+2014-2017 : Bachelor of Science in Geology at the Jean Monnet University (Saint-Etienne, France)
+
+### Professional experience  
+2020-2021 : Technician position for hydrogeochemistry at the Laboratoire de Géologie de Lyon, Jean Monnet University (Saint-Etienne, France)  
+2018-2020 : Research assistant at the Sedimentary Geology and Quaternary Research department, University of Freiburg im Breisgau (Germany)   
+:::
 
 ## Legal Notice
 
