--- a/index.qmd
+++ b/index.qmd
@@ -2,25 +2,20 @@
 pagetitle: "Armelle Ballian"
 ---
 :::{#template-area}
-## Vita 
-### Education  
-Since 2021 : PhD student at the Senckenberg Climate and Biodiversity Research Centre (SBiK-Frankfurt am Main, Germany)
-2017-2020 : Master of Science in Geology at the University of Freiburg im Breisgau (Germany)  
-2014-2017 : Bachelor of Science in Geology at the Jean Monnet University (Saint-Etienne, France)
-
-### Professional experience  
-2020-2021 : Technician position for hydrogeochemistry at the Laboratoire de Géologie de Lyon, Jean Monnet University (Saint-Etienne, France)  
-2018-2020 : Research assistant at the Sedimentary Geology and Quaternary Research department, University of Freiburg im Breisgau (Germany)   
-:::
 ## Publications 
 Ballian, A., Chawchai, S., Miocic, J. M., Charoenchatree, W., Bissen, R., & Preusser, F. (2023).  
 Late Holocene coastal dynamics south of the Chanthaburi estuary, eastern Gulf of Thailand. Quaternary Research, 1-11.  
-[here](https://www.cambridge.org/core/journals/quaternary-research/article/abs/late-holocene-coastal-dynamics-south-of-the-chanthaburi-estuary-eastern-gulf-of-thailand/CA506FAE3DF018CE3D7D2AEA52C6F4C9){target="_blank"}
+[link](https://www.cambridge.org/core/journals/quaternary-research/article/abs/late-holocene-coastal-dynamics-south-of-the-chanthaburi-estuary-eastern-gulf-of-thailand/CA506FAE3DF018CE3D7D2AEA52C6F4C9){target="_blank"}  
 Boateng, D., Mutz, S. G., Ballian, A., Meijers, M. J., Methner, K., Botsyun, S., Mulch, A., & Ehlers, T. A. (in review).  
 The effects of diachronous surface uplift of the European Alps on regional climate and the oxygen isotopic composition of precipitation. Earth System Dynamics Discussions, 1-45.   
-https://esd.copernicus.org/preprints/esd-2022-48/esd-2022-48.pdf  
+[link](https://esd.copernicus.org/preprints/esd-2022-48/esd-2022-48.pdf){target="_blank"}  
 
 :::
-## Conference abstracts
+## Conference abstracts  
 Ballian, A., Meijers, M., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  Early-Miocene stable isotope paleoaltimetry estimates for the Central Alps.   
-<https://scholar.google.com/citations?view_op=view_citation&hl=fr&user=aId4LewAAAAJ&citation_for_view=aId4LewAAAAJ:u5HHmVD_uO8C>
+[link](https://scholar.google.com/citations?view_op=view_citation&hl=fr&user=aId4LewAAAAJ&citation_for_view=aId4LewAAAAJ:u5HHmVD_uO8C){target="_blank"}  
+Ballian, A., Meijers, M., Methner, K., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  A Miocene (23–12.5 Ma) continental paleotemperature record from the northern Mediterranean region (Digne-Valensole Basin, SE France).  
+[link](https://meetingorganizer.copernicus.org/EGU23/EGU23-14517.html){target="_blank"}  
+
+
+
