--- a/index.qmd
+++ b/index.qmd
@@ -4,18 +4,14 @@ pagetitle: "Armelle Ballian"
 :::{#template-area}
 ## Publications 
 Ballian, A., Chawchai, S., Miocic, J. M., Charoenchatree, W., Bissen, R., & Preusser, F. (2023).  
-Late Holocene coastal dynamics south of the Chanthaburi estuary, eastern Gulf of Thailand. Quaternary Research, 1-11.  
-[link](https://www.cambridge.org/core/journals/quaternary-research/article/abs/late-holocene-coastal-dynamics-south-of-the-chanthaburi-estuary-eastern-gulf-of-thailand/CA506FAE3DF018CE3D7D2AEA52C6F4C9){target="_blank"}  
+Late Holocene coastal dynamics south of the Chanthaburi estuary, eastern Gulf of Thailand. Quaternary Research, 1-11.[☺︎](https://www.cambridge.org/core/journals/quaternary-research/article/abs/late-holocene-coastal-dynamics-south-of-the-chanthaburi-estuary-eastern-gulf-of-thailand/CA506FAE3DF018CE3D7D2AEA52C6F4C9){target="_blank"}  
 Boateng, D., Mutz, S. G., Ballian, A., Meijers, M. J., Methner, K., Botsyun, S., Mulch, A., & Ehlers, T. A. (in review).  
-The effects of diachronous surface uplift of the European Alps on regional climate and the oxygen isotopic composition of precipitation. Earth System Dynamics Discussions, 1-45.   
-[link](https://esd.copernicus.org/preprints/esd-2022-48/esd-2022-48.pdf){target="_blank"}  
+The effects of diachronous surface uplift of the European Alps on regional climate and the oxygen isotopic composition of precipitation. Earth System Dynamics Discussions, 1-45. [☺︎](https://esd.copernicus.org/preprints/esd-2022-48/esd-2022-48.pdf){target="_blank"}  
 
 :::
 ## Conference abstracts  
-Ballian, A., Meijers, M., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  Early-Miocene stable isotope paleoaltimetry estimates for the Central Alps.   
-[link](https://scholar.google.com/citations?view_op=view_citation&hl=fr&user=aId4LewAAAAJ&citation_for_view=aId4LewAAAAJ:u5HHmVD_uO8C){target="_blank"}  
-Ballian, A., Meijers, M., Methner, K., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  A Miocene (23–12.5 Ma) continental paleotemperature record from the northern Mediterranean region (Digne-Valensole Basin, SE France).  
-[link](https://meetingorganizer.copernicus.org/EGU23/EGU23-14517.html){target="_blank"}  
+Ballian, A., Meijers, M., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  Early-Miocene stable isotope paleoaltimetry estimates for the Central Alps.[☺︎](https://scholar.google.com/citations?view_op=view_citation&hl=fr&user=aId4LewAAAAJ&citation_for_view=aId4LewAAAAJ:u5HHmVD_uO8C){target="_blank"}  
+Ballian, A., Meijers, M., Methner, K., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  A Miocene (23–12.5 Ma) continental paleotemperature record from the northern Mediterranean region (Digne-Valensole Basin, SE France). [☺︎](https://meetingorganizer.copernicus.org/EGU23/EGU23-14517.html){target="_blank"}  
 
 
 
