--- a/index.qmd
+++ b/index.qmd
@@ -2,16 +2,23 @@
 pagetitle: "Armelle Ballian"
 ---
 :::{#template-area}
-## Publications 
-Ballian, A., Chawchai, S., Miocic, J. M., Charoenchatree, W., Bissen, R., & Preusser, F. (2023).  
-Late Holocene coastal dynamics south of the Chanthaburi estuary, eastern Gulf of Thailand. Quaternary Research, 1-11.[☺︎](https://www.cambridge.org/core/journals/quaternary-research/article/abs/late-holocene-coastal-dynamics-south-of-the-chanthaburi-estuary-eastern-gulf-of-thailand/CA506FAE3DF018CE3D7D2AEA52C6F4C9){target="_blank"}  
-Boateng, D., Mutz, S. G., Ballian, A., Meijers, M. J., Methner, K., Botsyun, S., Mulch, A., & Ehlers, T. A. (in review).  
-The effects of diachronous surface uplift of the European Alps on regional climate and the oxygen isotopic composition of precipitation. Earth System Dynamics Discussions, 1-45. [☺︎](https://esd.copernicus.org/preprints/esd-2022-48/esd-2022-48.pdf){target="_blank"}  
+I am a geologist whose main interests cover sedimentary geology, exogenous processes and paleoenvironmental studies.
+
+My PhD project is part of the second phase of a DFG-funded SPP  ‘Mountain Building Processes in Four Dimensions (MB-4D)’.
+
+The project, entitled ‘Reconstructing Eastward Propagation of Surface Uplift in the Alps: Integrating Stable Isotope Paleoaltimetry and Paleoclimate Modelling (REAL)’ aims at constraining the surface uplift history of the European Alps in a paleoclimatic context.   
+My project focuses on the Western and Eastern Alps, along with extending the record for the Central Alps to pre-Miocene times. The research focuses on stable isotope-based paleoelevation and paleoclimate reconstructions (ẟ18O, ẟD, D47-D48). The obtained ẟ-ẟ paleoaltimetry and clumped isotope-derived paleotemperature records are coupled with an isotope tracking atmospheric General Circulation Model (GCM) performed by colleagues from the ‘Earth System Dynamics Group’ at the University of Tübingen.  
+
+When I am not working on the Alpine surface uplift history, I am playing cello, boxing or crafting ! 
 
 :::
-## Conference abstracts  
-Ballian, A., Meijers, M., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  Early-Miocene stable isotope paleoaltimetry estimates for the Central Alps.[☺︎](https://scholar.google.com/citations?view_op=view_citation&hl=fr&user=aId4LewAAAAJ&citation_for_view=aId4LewAAAAJ:u5HHmVD_uO8C){target="_blank"}  
-Ballian, A., Meijers, M., Methner, K., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  A Miocene (23–12.5 Ma) continental paleotemperature record from the northern Mediterranean region (Digne-Valensole Basin, SE France). [☺︎](https://meetingorganizer.copernicus.org/EGU23/EGU23-14517.html){target="_blank"}  
+## Vita 
+### Education  
+Senckenberg Climate and Biodiversity Research Centre (SBiK-Frankfurt am Main, Germany) | PhD student | 2021 - present  
+University of Freiburg im Breisgau (Germany) | Master of Science in Geology | 2017-2020  
+Jean Monnet University (Saint-Etienne, France) | Bachelor of Science in Geology | 2014-2017  
 
-
+### Professional experience  
+Laboratoire de Géologie de Lyon, Jean Monnet University (Saint-Etienne, France) | Technician position for hydrogeochemistry | 2020-2021  
+Sedimentary Geology and Quaternary Research department, University of Freiburg im Breisgau (Germany) | Research assistant | 2018-2020  
 
