--- a/index.qmd
+++ b/index.qmd
@@ -24,7 +24,26 @@ delete this section)
 
 :::
 Hi there !  
+
+I am currently a PhD student in the group 'Paleoclimate and Paleoenvironmental Dynamics' at the Senckenberg Biodiversity and Climate Research Centre (Frankfurt, Germany). 
+
+Below are some pictures from diverse field work I conducted in the past years (Thailand, France, Spain, Austrian Alps).
+
+-------
+
+Bonjour ! 
+
+Je suis actuellement doctorante dans le groupe 'Paléoclimat et Dynamiques Paléoenvironnementales' au sein de Senckenberg, institut de recherche pour le climat et la biodiversité. 
+
+Au-dessous sont quelques photos de travaux de terrains des dernières années (Thaïlande, France, Espagne, Alpes autrichiennes).
+
+
 :::
+
+
+
+
+
 
 ## Legal Notice
 
