--- a/index.qmd
+++ b/index.qmd
@@ -39,14 +39,12 @@ Au-dessous sont quelques photos de travaux de terrains des dernières années (T
 
 
 
-
-
-
 ## Legal Notice
 
 Provider according to § 5 TMG is:  
 Armelle Ballian  
-60433 Frankfurt am Main  
+Georg-Voigt-Str. 14-16
+60325 Frankfurt am Main  
 Germany  
 
 Phone +49 0 69 75421810  
