--- a/publi.qmd
+++ b/publi.qmd
@@ -3,15 +3,23 @@ pagetitle: "Armelle Ballian"
 ---
 :::{#template-area}
 ## Publications 
-Ballian, A., Chawchai, S., Miocic, J. M., Charoenchatree, W., Bissen, R., & Preusser, F. (2023).  
-Late Holocene coastal dynamics south of the Chanthaburi estuary, eastern Gulf of Thailand. Quaternary Research, 1-11.[☺︎](https://www.cambridge.org/core/journals/quaternary-research/article/abs/late-holocene-coastal-dynamics-south-of-the-chanthaburi-estuary-eastern-gulf-of-thailand/CA506FAE3DF018CE3D7D2AEA52C6F4C9){target="_blank"}  
-Boateng, D., Mutz, S. G., Ballian, A., Meijers, M. J., Methner, K., Botsyun, S., Mulch, A., & Ehlers, T. A. (in review).  
-The effects of diachronous surface uplift of the European Alps on regional climate and the oxygen isotopic composition of precipitation. Earth System Dynamics Discussions, 1-45. [☺︎](https://esd.copernicus.org/preprints/esd-2022-48/esd-2022-48.pdf){target="_blank"}  
+Bernecker, M., Hofmann, S., Staudigel, P. T., Davies, A. J., Tagliavento, M., Meijer, N., Ballian, A., & Fiebig, J. (2023). A robust methodology for triple (∆ 47,∆ 48,∆ 49) clumped isotope analysis of carbonates. Chemical Geology, 642, 121803. [🔎](https://www.sciencedirect.com/science/article/pii/S0009254123005041){target="_blank"} 
 
+Boateng, D., Mutz, S. G., Ballian, A., Meijers, M. J., Methner, K., Botsyun, S., Mulch, A., & Ehlers, T. A. (2023).  
+The effects of diachronous surface uplift of the European Alps on regional climate and the oxygen isotopic composition of precipitation. Earth System Dynamics Discussions, 1-45. [🔎](https://esd.copernicus.org/preprints/esd-2022-48/esd-2022-48.pdf){target="_blank"} 
+
+Ballian, A., Chawchai, S., Miocic, J. M., Charoenchatree, W., Bissen, R., & Preusser, F. (2023).  
+Late Holocene coastal dynamics south of the Chanthaburi estuary, eastern Gulf of Thailand. Quaternary Research, 1-11.[🔎](https://www.cambridge.org/core/journals/quaternary-research/article/abs/late-holocene-coastal-dynamics-south-of-the-chanthaburi-estuary-eastern-gulf-of-thailand/CA506FAE3DF018CE3D7D2AEA52C6F4C9){target="_blank"}  
+ 
 :::
 ## Conference abstracts  
-Ballian, A., Meijers, M., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  Early-Miocene stable isotope paleoaltimetry estimates for the Central Alps.[☺︎](https://scholar.google.com/citations?view_op=view_citation&hl=fr&user=aId4LewAAAAJ&citation_for_view=aId4LewAAAAJ:u5HHmVD_uO8C){target="_blank"}  
-Ballian, A., Meijers, M., Methner, K., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  A Miocene (23–12.5 Ma) continental paleotemperature record from the northern Mediterranean region (Digne-Valensole Basin, SE France). [☺︎](https://meetingorganizer.copernicus.org/EGU23/EGU23-14517.html){target="_blank"}  
+Ballian, A., Meijers, M., Methner, K., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2023)  Miocene (23-13 Ma) continental paleotemperature record from the northern Mediterranean region (Digne-Valensole basin, SE France) within a global climatic framework.[🔎](http://dx.doi.org/10.17169/refubium-40985){target="_blank"} 
+
+Ballian, A., Boateng, D., Mutz, S., Meijers, M., Methner, K., Ehlers, T., & Mulch, A. (2023)  The Alps Paleoelevation and Paleoclimate Experiment : Reconstructing Eastward Propagation of Surface Uplift in the ALPS (REAL) [🔎](http://dx.doi.org/10.17169/refubium-40986){target="_blank"} 
+
+Ballian, A., Meijers, M., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  Early-Miocene stable isotope paleoaltimetry estimates for the Central Alps.[🔎](https://scholar.google.com/citations?view_op=view_citation&hl=fr&user=aId4LewAAAAJ&citation_for_view=aId4LewAAAAJ:u5HHmVD_uO8C){target="_blank"}  
+
+Ballian, A., Meijers, M., Methner, K., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  A Miocene (23–12.5 Ma) continental paleotemperature record from the northern Mediterranean region (Digne-Valensole Basin, SE France). [🔎](https://meetingorganizer.copernicus.org/EGU23/EGU23-14517.html){target="_blank"}  
 
 
 
