--- a/publi.qmd
+++ b/publi.qmd
@@ -13,13 +13,13 @@ Late Holocene coastal dynamics south of the Chanthaburi estuary, eastern Gulf of
  
 :::
 ## Conference abstracts  
-Ballian, A., Meijers, M., Methner, K., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2023)  Miocene (23-13 Ma) continental paleotemperature record from the northern Mediterranean region (Digne-Valensole basin, SE France) within a global climatic framework.[🔎](http://dx.doi.org/10.17169/refubium-40985){target="_blank"} 
+Ballian, A., Meijers, M., Methner, K., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2023)  Miocene (23-13 Ma) continental paleotemperature record from the northern Mediterranean region (Digne-Valensole basin, SE France) within a global climatic framework [🔎](http://dx.doi.org/10.17169/refubium-40985){target="_blank"} 
 
 Ballian, A., Boateng, D., Mutz, S., Meijers, M., Methner, K., Ehlers, T., & Mulch, A. (2023)  The Alps Paleoelevation and Paleoclimate Experiment : Reconstructing Eastward Propagation of Surface Uplift in the ALPS (REAL) [🔎](http://dx.doi.org/10.17169/refubium-40986){target="_blank"} 
 
-Ballian, A., Meijers, M., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  Early-Miocene stable isotope paleoaltimetry estimates for the Central Alps.[🔎](https://scholar.google.com/citations?view_op=view_citation&hl=fr&user=aId4LewAAAAJ&citation_for_view=aId4LewAAAAJ:u5HHmVD_uO8C){target="_blank"}  
+Ballian, A., Meijers, M., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  Early-Miocene stable isotope paleoaltimetry estimates for the Central Alps [🔎](https://scholar.google.com/citations?view_op=view_citation&hl=fr&user=aId4LewAAAAJ&citation_for_view=aId4LewAAAAJ:u5HHmVD_uO8C){target="_blank"}  
 
-Ballian, A., Meijers, M., Methner, K., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  A Miocene (23–12.5 Ma) continental paleotemperature record from the northern Mediterranean region (Digne-Valensole Basin, SE France). [🔎](https://meetingorganizer.copernicus.org/EGU23/EGU23-14517.html){target="_blank"}  
+Ballian, A., Meijers, M., Methner, K., Cojan, I., Huyghe, D., Fiebig, J., & Mulch, A. (2022)  A Miocene (23–12.5 Ma) continental paleotemperature record from the northern Mediterranean region (Digne-Valensole Basin, SE France) [🔎](https://meetingorganizer.copernicus.org/EGU23/EGU23-14517.html){target="_blank"}  
 
 
 
