--- a/about.qmd
+++ b/about.qmd
@@ -14,11 +14,14 @@ When I am not working on the Alpine surface uplift history, I am playing cello, 
 :::
 ## Vita 
 ### Education  
-Senckenberg Climate and Biodiversity Research Centre (SBiK-Frankfurt am Main, Germany) | PhD student | 2021 - present  
-University of Freiburg im Breisgau (Germany) | Master of Science in Geology | 2017-2020  
-Jean Monnet University (Saint-Etienne, France) | Bachelor of Science in Geology | 2014-2017  
+2021 - present | PhD student | Senckenberg Climate and Biodiversity Research Centre (SBiK-Frankfurt am Main, Germany) 
+
+2017-2020 | Master of Science in Geology | University of Freiburg im Breisgau (Germany)
+
+2014-2017 | Bachelor of Science in Geology | Jean Monnet University (Saint-Etienne, France)
 
 ### Professional experience  
-Laboratoire de Géologie de Lyon, Jean Monnet University (Saint-Etienne, France) | Technician position for hydrogeochemistry | 2020-2021  
-Sedimentary Geology and Quaternary Research department, University of Freiburg im Breisgau (Germany) | Research assistant | 2018-2020  
+2020-2021 | Technician position for hydrogeochemistry | Laboratoire de Géologie de Lyon, Jean Monnet University (Saint-Etienne, France)
+
+2018-2020 | Research assistant | Sedimentary Geology and Quaternary Research department, University of Freiburg im Breisgau (Germany)
 
