--- a/index.qmd
+++ b/index.qmd
@@ -5,7 +5,7 @@ about:
   template: jolla
   image: profile.png
   links:
-    - icon: twitter
+    - icon: twitter-x
       text: X (Ex-twitter)
       href: https://twitter.com/armelleballian/
     - icon: github
