--- a/index.qmd
+++ b/index.qmd
@@ -29,9 +29,9 @@ delete this section)
 
 
 -------
-I am currently a 4th year PhD student in the group [Paleoclimate and Paleoenvironmental Dynamics](https://www.senckenberg.de/en/institutes/sbik-f/ag-paleoclimate-and-paleoenvironment-dynamics/){target="_blank"} at the Senckenberg Biodiversity and Climate Research Centre (Frankfurt, Germany).     
+I am currently a 4th year PhD student in the Research Group Paleoclimate and Paleoenvironmental Dynamics at Senckenberg Biodiversity and Climate Research Centre (Frankfurt, Germany).     
 --
-Je suis actuellement en 4ème année de doctorat dans le groupe 'Paléoclimat et Dynamiques Paléoenvironnementales' au sein de Senckenberg, institut de recherche pour le climat et la biodiversité.  
+Je suis actuellement en 4ème année de doctorat dans le groupe de recherche Paléoclimat et Dynamiques Paléoenvironnementales au sein de Senckenberg, institut de recherche pour le climat et la biodiversité.  
 -------
 
 
