--- a/_footer.qmd
+++ b/_footer.qmd
@@ -1,7 +1,7 @@
 <footer>
-  <h3>Legal Notice</h3>
-  <p>Provider according to § 5 TMG is:</p>
   <p>
+    <strong>Legal Notice</strong><br>
+    Provider according to § 5 TMG is:<br>
     Armelle Ballian<br>
     Georg-Voigt-Str. 14-16<br>
     60325 Frankfurt am Main<br>
@@ -10,8 +10,8 @@
     Phone: +49 0 69 75421810<br>
     E-Mail: armelle.ballian [at] senckenberg.de
   </p>
-  <h3>Privacy</h3>
   <p>
+    <strong>Privacy</strong><br>
     This webpage does not use any cookies. It does not collect, store or process personal data. The website is hosted by 
     <a href="https://github.com/" target="_blank">GitHub Inc.</a> using 
     <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages" target="_blank">GitHub Pages</a>. 
