--- a/_footer.qmd
+++ b/_footer.qmd
@@ -1,21 +1,6 @@
 <footer>
   <p>
-    <strong>Legal Notice</strong><br>
-    Provider according to § 5 TMG is:<br>
-    Armelle Ballian<br>
-    Georg-Voigt-Str. 14-16<br>
-    60325 Frankfurt am Main<br>
-    Germany<br>
-    <br>
-    Phone: +49 0 69 75421810<br>
-    E-Mail: armelle.ballian [at] senckenberg.de
-  </p>
-  <p>
-    <strong>Privacy</strong><br>
-    This webpage does not use any cookies. It does not collect, store or process personal data. The website is hosted by 
-    <a href="https://github.com/" target="_blank">GitHub Inc.</a> using 
-    <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages" target="_blank">GitHub Pages</a>. 
-    The privacy statement of GitHub is available 
-    <a href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement" target="_blank">here</a>.
+    <a href="legal-notice.qmd">Legal Notice</a> |
+    <a href="privacy-policy.qmd">Privacy Policy</a>
   </p>
 </footer>
