--- a/publi.qmd
+++ b/publi.qmd
@@ -3,15 +3,15 @@ pagetitle: "Armelle Ballian"
 ---
 :::{#template-area}
 ## Publications 
-Ballian, A., Meijers, M. J. M., Cojan, I., Huyghe, D., Bernecker, M., Methner, K., Tagliavento, M., Fiebig, J., and Mulch, A. (2024).
+<u>Ballian, A.</u>, Meijers, M. J. M., Cojan, I., Huyghe, D., Bernecker, M., Methner, K., Tagliavento, M., Fiebig, J., and Mulch, A. (2024).
 Middle Miocene climate evolution in the Northern Mediterranean region (Digne-Valensole basin, SE France), EGUsphere, 2024, 1–24 [🔍](https://doi.org/10.5194/egusphere-2024-2093){target="_blank"}  
 
-Ballian, A., Chawchai, S., Miocic, J. M., Charoenchatree, W., Bissen, R., and Preusser, F. (2024).  
+<u>Ballian, A.</u>, Chawchai, S., Miocic, J. M., Charoenchatree, W., Bissen, R., and Preusser, F. (2024).  
 Late Holocene coastal dynamics south of the Chanthaburi estuary, eastern Gulf of Thailand.  Quaternary Research. 117:19-29 [🔍](https://www.cambridge.org/core/journals/quaternary-research/article/abs/late-holocene-coastal-dynamics-south-of-the-chanthaburi-estuary-eastern-gulf-of-thailand/CA506FAE3DF018CE3D7D2AEA52C6F4C9){target="_blank"} 
 
-Bernecker, M., Hofmann, S., Staudigel, P. T., Davies, A. J., Tagliavento, M., Meijer, N., Ballian, A., and Fiebig, J. (2023). A robust methodology for triple (∆ 47,∆ 48,∆ 49) clumped isotope analysis of carbonates. Chemical Geology, 642, 121803 [🔍](https://www.sciencedirect.com/science/article/pii/S0009254123005041){target="_blank"} 
+Bernecker, M., Hofmann, S., Staudigel, P. T., Davies, A. J., Tagliavento, M., Meijer, N., <u>Ballian, A.</u>, and Fiebig, J. (2023). A robust methodology for triple (∆ 47,∆ 48,∆ 49) clumped isotope analysis of carbonates. Chemical Geology, 642, 121803 [🔍](https://www.sciencedirect.com/science/article/pii/S0009254123005041){target="_blank"} 
 
-Boateng, D., Mutz, S. G., Ballian, A., Meijers, M. J. M. , Methner, K., Botsyun, S., Mulch, A., and Ehlers, T. A. (2023).  
+Boateng, D., Mutz, S. G., <u>Ballian, A.</u>, Meijers, M. J. M. , Methner, K., Botsyun, S., Mulch, A., and Ehlers, T. A. (2023).  
 The effects of diachronous surface uplift of the European Alps on regional climate and the oxygen isotopic composition of precipitation. Earth System Dynamics Discussions, 1-45 [🔍](https://esd.copernicus.org/articles/14/1183/2023/esd-14-1183-2023.pdf){target="_blank"} 
 :::
 ## Conference abstracts  
