--- a/cv.qmd
+++ b/cv.qmd
@@ -4,4 +4,4 @@ title: "Curriculum Vitae"
 
 You can download my CV by clicking the link below:
 
-[Download CV (PDF)](cv.pdf){target="_blank"}
+[Download CV (PDF)](CV.pdf){target="_blank"}
