--- a/index.qmd
+++ b/index.qmd
@@ -35,9 +35,10 @@ Je suis actuellement en 4ème année de doctorat dans le groupe de recherche Pal
 --
 ## Field pictures
 
+
 <div class="gallery">
     <div class="gallery-item">
-        <img src="images/pic1.jpg" alt="Photo 1">
+        <img src="images/pic1.jpeg" alt="Photo 1">
     </div>
     <div class="gallery-item">
         <img src="images/pic2.jpg" alt="Photo 2">
@@ -45,7 +46,7 @@ Je suis actuellement en 4ème année de doctorat dans le groupe de recherche Pal
     <div class="gallery-item">
         <img src="images/pic3.jpg" alt="Photo 3">
     </div>
-    <!-- Add more images as needed -->
+  
 </div>
 
 <style>
