--- a/index.qmd
+++ b/index.qmd
@@ -35,31 +35,6 @@ Je suis actuellement en 4ème année de doctorat dans le groupe de recherche Pal
 --
 ## Field pictures
 
-<div class="gallery">
-    <div class="gallery-item">
-        <img src="images/pic1.jpeg" alt="Photo 1">
-    </div>
-    <div class="gallery-item">
-        <img src="images/pic2.jpg" alt="Photo 2">
-    </div>
-    <div class="gallery-item">
-        <img src="images/pic3.jpg" alt="Photo 3">
-    </div>
-</div>
-
-<style>
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 10px;
-}
-
-.gallery-item {
-    margin-bottom: 10px;
-}
-
-.gallery-item img {
-    width: 100%;
-    height: auto;
-}
-</style>
+![Digne Valensole basin, SE France](pic1.jpeg)
+![Armantes section, Central Spain](pic2.jpg)
+![Chanthaburi Region, Thailand](pic3.jpg)
