--- a/index.qmd
+++ b/index.qmd
@@ -36,11 +36,11 @@ Je suis actuellement en 4ème année de doctorat dans le groupe de recherche Pal
 ## Field pictures
 
 ![Digne Valensole basin, SE France](pic1.jpeg)
-*Digne Valensole basin, SE France*
+*Digne Valensole basin, SE France | Sampling of pedogenic carbonate nodules*
 ![Armantes section, Central Spain](pic2.jpg)
 *Armantes section, Central Spain*
 ![Mölltal Valley, Austria](pic4.jpg)
 *Mölltal Valley, Austria*
 ![Chanthaburi Region, Thailand](pic3.jpg)
-*Chanthaburi Region, Thailand*
+*Chanthaburi Region, Thailand | Beach ridges digging*
 
