--- a/index.qmd
+++ b/index.qmd
@@ -36,17 +36,17 @@ Je suis actuellement en 4ème année de doctorat dans le groupe de recherche Pal
 ## Field pictures
 
 ![Digne Valensole basin, SE France](pic1.jpeg)
-*Digne Valensole basin, SE France | Sampling of pedogenic carbonate nodules*
+*Digne Valensole basin, SE France | Pedogenic carbonate nodules sampling (2021)*
 
 
 ![Armantes section, Central Spain](pic2.jpg)
-*Armantes section, Central Spain*
+*Armantes section, Central Spain (2022)*
 
 
 ![Mölltal Valley, Austria](pic4.jpg)
-*Mölltal Valley, Austria*
+*Mölltal Valley, Austria (2021) *
 
 
 ![Chanthaburi Region, Thailand](pic3.jpg)
-*Chanthaburi Region, Thailand | Beach ridges digging*
+*Chanthaburi Region, Thailand | Beach ridges digging (2019)*
 
