--- a/index.qmd
+++ b/index.qmd
@@ -29,24 +29,28 @@ delete this section)
 
 
 -------
-I am currently a 4th year PhD student in the Research Group Paleoclimate and Paleoenvironmental Dynamics at Senckenberg Biodiversity and Climate Research Centre (Frankfurt am Main, Germany). 
+I am currently a 4th year PhD student in the Research Group Paleoclimate and Paleoenvironmental Dynamics at Senckenberg Biodiversity and Climate Research Centre (Frankfurt am Main, Germany). You can find below pictures from the fieldwork carried out during my Master’s and PhD studies.
 --
-Je suis actuellement en 4ème année de doctorat dans le groupe de recherche Paléoclimat et Dynamiques Paléoenvironnementales au sein de Senckenberg, institut de recherche pour le climat et la biodiversité (Francfort sur le Main, Allemagne).  
+Je suis actuellement en 4ème année de doctorat dans le groupe de recherche Paléoclimat et Dynamiques Paléoenvironnementales au sein de Senckenberg, institut de recherche pour le climat et la biodiversité (Francfort sur le Main, Allemagne). Ci-dessous, des photos du travail de terrain effectué pendant mes études de Master et de doctorat.
 --
-## Field pictures
+
+![Chanthaburi Region, Thailand](pic3.jpg)
+*Chanthaburi, Thailand | Beach ridges digging (2019)*
+
+![Chanthaburi Region, Thailand](pic5.jpg)
+*Chanthaburi, Thailand | Beach ridges digging (2019)*
 
 ![Digne Valensole basin, SE France](pic1.jpeg)
 *Digne Valensole basin, SE France | Pedogenic carbonate nodules sampling (2021)*
 
+![Mölltal Valley, Austria](pic4.jpg)
+*Mölltal Valley, Austria (2021) *
 
 ![Armantes section, Central Spain](pic2.jpg)
 *Armantes section, Central Spain (2022)*
 
 
-![Mölltal Valley, Austria](pic4.jpg)
-*Mölltal Valley, Austria (2021) *
 
 
-![Chanthaburi Region, Thailand](pic3.jpg)
-*Chanthaburi Region, Thailand | Beach ridges digging (2019)*
+
 
