--- a/index.qmd
+++ b/index.qmd
@@ -35,13 +35,13 @@ Je suis actuellement en 4ème année de doctorat dans le groupe de recherche Pal
 --
 
 ![Chanthaburi Region, Thailand](pic3.jpg)
-*Chanthaburi, Thailand | Beach ridges digging (2019)*
+*Chanthaburi, Thailand | Excavating beach ridges (2019)*
 
 ![Chanthaburi Region, Thailand](pic5.jpg)
-*Chanthaburi, Thailand | Beach ridges digging (2019)*
+*Chanthaburi, Thailand | Excavating beach ridges (2019)*
 
 ![Digne Valensole basin, SE France](pic1.jpeg)
-*Digne Valensole basin, SE France | Pedogenic carbonate nodules sampling (2021)*
+*Digne Valensole basin, SE France | Sampling pedogenic carbonate nodules (2021)*
 
 ![Mölltal Valley, Austria](pic4.jpg)
 *Mölltal Valley, Austria (2021) *
