--- a/index.qmd
+++ b/index.qmd
@@ -39,7 +39,7 @@ Ci-dessous, des photos du travail de terrain effectué pendant mes études de Ma
 *Chanthaburi, Thailand | Excavating beach ridges (2019) ©J. Miocic*
 
 ![Chanthaburi Region, Thailand](pic5.jpg)
-*Chanthaburi, Thailand | Excavating beach ridges (2019) ©J. Miocic*
+*Chanthaburi, Thailand | Excavating beach ridges (2019) ©S. Chawchai*
 
 ![Digne Valensole basin, SE France](pic1.jpeg)
 *Digne Valensole basin, SE France | Sampling pedogenic carbonate nodules (2021)*
