--- a/award.qmd
+++ b/award.qmd
@@ -4,5 +4,7 @@ pagetitle: "Awards"
 :::{#template-area}
 ## Awards
 
-April 2024 | Outstanding Student Presentation Award (OSPA) | AGU23
-May 2023 | European Consortium for Ocean Research Drilling (ECORD) scholarship 2023 for attending the Urbino Summer School in Paleoclimate
+April 2024 | AGU23 Outstanding Student Presentation Award (OSPA) [🔍](https://www.agu.org/honors/ospa/past-recipients){target="_blank"}  
+
+
+May 2023 | European Consortium for Ocean Research Drilling (ECORD) scholarship 2023 for attending the Urbino Summer School in Paleoclimate [🔍](https://www.ecord.org/education/scholarship/){target="_blank"} 
