--- a/about.qmd
+++ b/about.qmd
@@ -10,11 +10,10 @@ I joined Senckenberg in 2021 to pursue my academic journey with a PhD and expend
 
 
 My PhD project is part of the second phase of a DFG-funded SPP  ‘Mountain Building Processes in Four Dimensions (MB-4D)’.
-
 The project, entitled ‘Reconstructing Eastward Propagation of Surface Uplift in the Alps: Integrating Stable Isotope Paleoaltimetry and Paleoclimate Modelling (REAL)’ aims at constraining the surface uplift history of the European Alps in a paleoclimatic context.   
 My project focuses on the Western and Eastern Alps, along with extending the record for the Central Alps to pre-Miocene times. The research focuses on stable isotope-based paleoelevation and paleoclimate reconstructions (ẟ18O, ẟD, D47-D48). The obtained ẟ-ẟ paleoaltimetry and clumped isotope-derived paleotemperature records are coupled with an isotope tracking atmospheric General Circulation Model (GCM) performed by colleagues from the ‘Earth System Dynamics Group’ at the University of Tübingen.  
 
-When I am not working on the Alpine surface uplift history, I am playing cello, boxing, hiking or crafting.
+When I am not working on the Alpine surface uplift history, I am playing cello, boxing, crafting, or hiking (in the Alps).
 
 :::
 ## Education
@@ -25,4 +24,8 @@ When I am not working on the Alpine surface uplift history, I am playing cello, 
 2014-2017 | Bachelor of Science in Geology | Jean Monnet University (Saint-Etienne, France)
 
 
+
+
+
+...
 
