--- a/about.qmd
+++ b/about.qmd
@@ -24,8 +24,12 @@ When I am not working on the Alpine surface uplift history, I am playing cello, 
 2014-2017 | Bachelor of Science in Geology | Jean Monnet University (Saint-Etienne, France)
 
 
+___
+![First steps in the academia journey](pic7.jpg)
+*Go back to when the Master thesis was ready to submit and the academic journey ready to begin (2021) *
 
-
+![AGU23](pic6.jpg)
+*Poster presentation at AGU23 for which I will receive an OSPA award (2023) *
 
 ---
 
