--- a/about.qmd
+++ b/about.qmd
@@ -25,7 +25,7 @@ When I am not working on the Alpine surface uplift history, I am playing cello, 
 
 
 ___
-![First steps in the academia journey](pic7.jpg)
+![First steps in the academia journey](pic7.JPG)
 *Go back to when the Master thesis was ready to submit and the academic journey ready to begin (2021) *
 
 ![AGU23](pic6.jpg)
