--- a/about.qmd
+++ b/about.qmd
@@ -29,7 +29,7 @@ ___
 *Go back to when the Master thesis was ready to submit and the academic journey ready to begin (2021) *
 
 ![AGU23](pic6.jpg)
-*Poster presentation at AGU23 for which I will receive an OSPA award (2023) *
+*Poster presentation at AGU23 for which I received an OSPA award (2023) *
 
 ---
 
