--- a/publi.qmd
+++ b/publi.qmd
@@ -3,8 +3,9 @@ pagetitle: "Armelle Ballian"
 ---
 :::{#template-area}
 ## Publications 
-<u>Ballian, A.</u>, Meijers, M. J. M., Cojan, I., Huyghe, D., Bernecker, M., Methner, K., Tagliavento, M., Fiebig, J., and Mulch, A. (2024).
-Middle Miocene climate evolution in the Northern Mediterranean region (Digne-Valensole basin, SE France), EGUsphere, 2024, 1–24 [🔍](https://doi.org/10.5194/egusphere-2024-2093){target="_blank"}  
+<u>Ballian, A.</u>, Meijers, M. J. M., Cojan, I., Huyghe, D., Bernecker, M., Methner, K., Tagliavento, M., Fiebig, J., and Mulch, A. (2025).
+Middle Miocene climate evolution in the Northern Mediterranean region (Digne-Valensole basin, SE France), Clim Past, 21, 841–856 [🔍](https://doi.org/10.5194/cp-21-841-2025){target="_blank"}  
+Boateng, D., Mutz, S., Methner, K.,<u>Ballian, A.<u>, Meijers, M. J. M., Mulch, A., Ehlers, T. A. (2025). Refining paleoelevation estimates of the European Alps by simulating Middle Miocene climate and δ18O responses to diachronous surface uplift scenarios, Global and Planetary Change, 251, 104808, ISSN 0921-8181, [🔍] (https://doi.org/10.1016/j.gloplacha.2025.104808){target="_blank"}
 
 <u>Ballian, A.</u>, Chawchai, S., Miocic, J. M., Charoenchatree, W., Bissen, R., and Preusser, F. (2024).  
 Late Holocene coastal dynamics south of the Chanthaburi estuary, eastern Gulf of Thailand.  Quaternary Research. 117:19-29 [🔍](https://www.cambridge.org/core/journals/quaternary-research/article/abs/late-holocene-coastal-dynamics-south-of-the-chanthaburi-estuary-eastern-gulf-of-thailand/CA506FAE3DF018CE3D7D2AEA52C6F4C9){target="_blank"} 
