--- a/publi.qmd
+++ b/publi.qmd
@@ -4,7 +4,8 @@ pagetitle: "Armelle Ballian"
 :::{#template-area}
 ## Publications 
 <u>Ballian, A.</u>, Meijers, M. J. M., Cojan, I., Huyghe, D., Bernecker, M., Methner, K., Tagliavento, M., Fiebig, J., and Mulch, A. (2025).
-Middle Miocene climate evolution in the Northern Mediterranean region (Digne-Valensole basin, SE France), Clim Past, 21, 841–856 [🔍](https://doi.org/10.5194/cp-21-841-2025){target="_blank"}  
+Middle Miocene climate evolution in the Northern Mediterranean region (Digne-Valensole basin, SE France), Clim. Past, 21, 841–856 [🔍](https://doi.org/10.5194/cp-21-841-2025){target="_blank"}  
+
 Boateng, D., Mutz, S., Methner, K.,<u>Ballian, A.<u>, Meijers, M. J. M., Mulch, A., Ehlers, T. A. (2025). Refining paleoelevation estimates of the European Alps by simulating Middle Miocene climate and δ18O responses to diachronous surface uplift scenarios, Global and Planetary Change, 251, 104808, ISSN 0921-8181, [🔍] (https://doi.org/10.1016/j.gloplacha.2025.104808){target="_blank"}
 
 <u>Ballian, A.</u>, Chawchai, S., Miocic, J. M., Charoenchatree, W., Bissen, R., and Preusser, F. (2024).  
