--- a/about.qmd
+++ b/about.qmd
@@ -3,17 +3,20 @@ pagetitle: "Armelle Ballian"
 ---
 :::{#template-area}
 ## My Story
-I'm a passionate geologist and paleoclimate scientist based in Frankfurt am Main, Germany. With a deep love for understanding Earth's processes, I dedicate my work to uncovering the past climates and environments of our planet. My main interests cover sedimentary geology, exogenous processes and paleoenvironmental studies.
+I'm a passionate geologist and paleoclimate scientist based in Tübingen, Germany. With a deep love for understanding Earth's processes, I dedicate my work to uncovering the past climates and environments of our planet. My main interests cover isotope geochemistry, paleoclimatology, exogenous processes, and paleoenvironmental studies.
 
 I graduated with a Master's degree in Geology from the University of Freiburg. My MSc thesis aimed at reconstructing the Holocene coastal dynamics of the Chanthaburi estuary in the Gulf of Thailand. 
-I joined Senckenberg in 2021 to pursue my academic journey with a PhD and expend my knowledge in paleoclimate and geochemistry. 
+I pursued my academic journey in 2021 with a PhD at the [Senckenberg Biodiversity and Climate Research Centre] (https://www.senckenberg.de/en/institutes/sbik-f/ag-paleoclimate-and-paleoenvironment-dynamics/){target="_blank"} in Frankfurt am Main expending my knowledge in paleoclimate and geochemistry. 
 
 
 My PhD project is part of the second phase of a DFG-funded SPP  ‘Mountain Building Processes in Four Dimensions (MB-4D)’.
 The project, entitled ‘Reconstructing Eastward Propagation of Surface Uplift in the Alps: Integrating Stable Isotope Paleoaltimetry and Paleoclimate Modelling (REAL)’ aims at constraining the surface uplift history of the European Alps in a paleoclimatic context.   
 My project focuses on the Western and Eastern Alps, along with extending the record for the Central Alps to pre-Miocene times. The research focuses on stable isotope-based paleoelevation and paleoclimate reconstructions (ẟ18O, ẟD, D47-D48). The obtained ẟ-ẟ paleoaltimetry and clumped isotope-derived paleotemperature records are coupled with an isotope tracking atmospheric General Circulation Model (GCM) performed by colleagues from the ‘Earth System Dynamics Group’ at the University of Tübingen.  
 
-When I am not working on the Alpine surface uplift history, I am playing cello, boxing, crafting, or hiking (in the Alps).
+
+Since April 2025, I joined the [Climatology and the Biosphere group] (https://uni-tuebingen.de/en/fakultaeten/mathematisch-naturwissenschaftliche-fakultaet/fachbereiche/geowissenschaften/arbeitsgruppen/geo-und-umweltnaturwissenschaften/geo-und-umweltnaturwissenschaften/climatology-and-the-biosphere/workgroup/){target="_blank"} at the university of Tuebingen as a Research Scientist. My main tasks include stable isotope analysis of water samples and the active monitoring of cave systems to investigate environmental processes.
+
+When I am not working in the lab, I am playing cello, boxing, crafting, or hiking (in the Alps).
 
 :::
 ## Education
